# airship

./: LICENSE  README.md  dependencies.yaml
airship_chat/: README.md  package.xml  setup.cfg  setup.py
airship_chat/airship_chat/: chatbot_node.py
airship_chat/config/: config.yaml
airship_chat/launch/: run_airship_chat_node.launch.py
airship_description/: CMakeLists.txt  package.xml
airship_description/urdf/: airsbot2.urdf
airship_grasp/: README.md  package.xml  setup.cfg  setup.py
airship_grasp/airship_grasp/: grasp_server_node.py
airship_grasp/config/: airship_grasp_config.yaml
airship_grasp/launch/: grasp.launch.py
airship_grasp/lib/: camera_intrinsic.py  utility_elephant_robot.py  utility_graspnet.py
airship_interface/: CMakeLists.txt  package.xml
airship_interface/srv/: AirshipGrasp.srv  AirshipInstruct.srv  AirshipNav.srv  SaveObjectNavGoal.srv  SegmentationGrasping.srv  SegmentationMapping.srv
airship_localization/: CMakeLists.txt  README.md  package.xml
airship_localization/configuration_files/: airship_localization_2d.lua  airship_mapping_2d.lua  airship_mapping_3d.lua  cartographer_2d.rviz
airship_localization/launch/: 2d_mapping.launch.py  3d_mapping.launch.py  airship_localization_2d.launch.py  airship_localization_2d_rosbag.launch.py  airship_mapping_2d.launch.py  airship_mapping_3d.launch.py
airship_localization/map/: map.pgm  map.yaml
airship_localization/src/: rslidar_conversion_node.cpp
airship_navigation/: README.md  package.xml  setup.cfg  setup.py
airship_navigation/airship_navigation/: navigation_service_node.py
airship_navigation/config/: neo_airsbot2.yaml
airship_navigation/config/behavior_trees/: navigate_through_poses_w_replanning_and_recovery.xml  navigate_to_pose_w_replanning_and_recovery.xml
airship_navigation/launch/: airship_navigation.launch.py  navigation_launch.py
airship_object/: README.md  package.xml  setup.cfg  setup.py
airship_object/airship_object/: object_map_node.py
airship_object/config/: airship_object.rviz  config.yaml  config_object_depth_zed2.yaml  config_segmentation_service_client.yaml
airship_object/launch/: run_object_map_node.launch.py  run_rviz.launch.py
airship_object/lib/: config.py  io_nav_goal.py  map_2d.py  object_depth.py  plot_ros.py  segmentation_service_client.py  (+1 more)
airship_perception/: README.md  package.xml  setup.cfg  setup.py
airship_planner/: README.md  package.xml  setup.cfg  setup.py
docs/: README.md
(+18 files in other folders)
