<package format="2">
  <name>airship_navigation</name>
  <version>0.0.0</version>
  <description>Airship Navigation Package</description>

  <maintainer email="airship@cuhk.edu.cn">your_name</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>rclpy</build_depend>
  <build_depend>airship_interface</build_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>airship_interface</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
